--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,3 +76,8 @@ a:hover {
 .post-content .tag.right a {
   color: #999;
 }
+
+/* ---------- comments ---------- */
+.comment .avatar img {
+  height: 2.5em !important;
+}
