--- a/views/components/nav.ejs
+++ b/views/components/nav.ejs
@@ -4,7 +4,12 @@
 
     <div class="eight wide column">
       <a href="/posts"><h1><%= blog.title %></h1></a>
-      <p><%= user.name %>  <%= blog.description %></p>
+      <p>
+        <% if(user){ %>
+          <%= user.name %> 
+        <% } %>
+        <%= blog.description %>
+      </p>
     </div>
   </div>
 </div>
